--- a/.github/workflows/magellan_andromeda.yml
+++ b/.github/workflows/magellan_andromeda.yml
@@ -379,7 +379,9 @@ jobs:
         run: |
           cd ${{ env.MAIN }}
 
-          desc=$(curl --silent -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ env.ANDROMEDA_REPO }}/compare/${{ needs.check-upstreams.outputs.andromeda_current }}...${{ needs.check-upstreams.outputs.andromeda }} | jq -r '.commits[] | "${{ env.ANDROMEDA_REPO }}@\(.sha[:7]) \(.commit.message | split("\r\n")[0] | split("\n")[0])"')
+          response=$(curl --silent -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ env.ANDROMEDA_REPO }}/compare/${{ needs.check-upstreams.outputs.andromeda_current }}...${{ needs.check-upstreams.outputs.andromeda }})
+          echo $response
+          desc=$(echo $response | jq -r '.commits[] | "${{ env.ANDROMEDA_REPO }}@\(.sha[:7]) \(.commit.message | split("\r\n")[0] | split("\n")[0])"')
 
           git add .
           printf "Updated Upstream (Andromeda)\n\nUpstream has released updates that appear to apply and compile correctly\n\nAndromeda Changes:\n$desc" | git commit -F -
