--- a/.github/workflows/magellan_andromeda.yml
+++ b/.github/workflows/magellan_andromeda.yml
@@ -77,11 +77,11 @@ jobs:
         id: jdk
         run: |
           response=$(curl --silent https://api.github.com/repos/${{ env.JDK_REPO }}/releases/latest)
+          echo $response
           latest=$(echo $response | jq -r ".tag_name" | cut -c 5-)
           current=$(cat ${{ env.MAIN }}/.github/workflows/build.yml | grep jdk: | cut -d "[" -f 2 | cut -d "]" -f 1)
           echo "Current: $current, Latest: $latest"
           printf "\nResponse:\n"
-          echo $response
 
           if [ "$latest" != "$current" ]; then
             echo "latest=$latest" >> $GITHUB_OUTPUT
@@ -106,11 +106,11 @@ jobs:
         id: shadow
         run: |
           response=$(curl --silent https://api.github.com/repos/${{ env.SHADOW_REPO }}/releases/latest)
+          echo $response
           latest=$(echo $response | jq -r ".tag_name")
           current=$(cat ${{ env.MAIN }}/build.gradle.kts | grep com.github.johnrengelman.shadow | cut -d "\"" -f 4)
           echo "Current: $current, Latest: $latest"
           printf "\nResponse:\n"
-          echo $response
 
           if [ "$latest" != "$current" ]; then
             echo "latest=$latest" >> $GITHUB_OUTPUT
@@ -122,11 +122,11 @@ jobs:
         id: paperweight
         run: |
           response=$(curl --silent https://api.github.com/repos/${{ env.PAPERWEIGHT_REPO }}/tags)
+          echo $response
           latest=$(echo $response | jq -r ".[0].name" | cut -c 2-)
           current=$(cat ${{ env.MAIN }}/build.gradle.kts | grep io.papermc.paperweight.patcher | cut -d "\"" -f 4)
           echo "Current: $current, Latest: $latest"
           printf "\nResponse:\n"
-          echo $response
 
           if [ "$latest" != "$current" ]; then
             echo "latest=$latest" >> $GITHUB_OUTPUT
@@ -138,11 +138,11 @@ jobs:
         id: paperclip
         run: |
           response=$(curl --silent https://api.github.com/repos/${{ env.PAPERCLIP_REPO }}/tags)
+          echo $response
           latest=$(echo $response | jq -r ".[0].name" | cut -c 2-)
           current=$(cat ${{ env.MAIN }}/build.gradle.kts | grep io.papermc:paperclip | cut -d "\"" -f 2 | cut -d ":" -f 3)
           echo "Current: $current, Latest: $latest"
           printf "\nResponse:\n"
-          echo $response
 
           if [ "$latest" != "$current" ]; then
             echo "latest=$latest" >> $GITHUB_OUTPUT
@@ -204,11 +204,11 @@ jobs:
         id: andromeda
         run: |
           response=$(curl --silent https://api.github.com/repos/${{ env.ANDROMEDA_REPO }}/commits?sha=${{ env.ANDROMEDA_BRANCH }})
+          echo $response
           latest=$(echo $response | jq -r ".[0].sha")
           current=$(cat ${{ env.MAIN }}/gradle.properties | grep andromedaCommit | sed 's/andromedaCommit = //')
           echo "Current: $current, Latest: $latest"
           printf "\nResponse:\n"
-          echo $response
 
           if [ "$latest" != "$current" ]; then
             echo "latest=$latest" >> $GITHUB_OUTPUT
@@ -380,6 +380,7 @@ jobs:
           cd ${{ env.MAIN }}
 
           response=$(curl --silent -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ env.ANDROMEDA_REPO }}/compare/${{ needs.check-upstreams.outputs.andromeda_current }}...${{ needs.check-upstreams.outputs.andromeda }})
+          printf "\nPaper Changes:\n"
           echo $response
           desc=$(echo $response | jq -r '.commits[] | "${{ env.ANDROMEDA_REPO }}@\(.sha[:7]) \(.commit.message | split("\r\n")[0] | split("\n")[0])"')
 
